# Zero

./: .env.example  .gitignore  CACHE-CLEARING-GUIDE.md  DEPLOYMENT-COMPLETE-SUMMARY.md  INTERCOM-REMOVAL.md  package.json  pnpm-lock.yaml  todo.md
.github/workflows/: tauri-release.yml
apps/desktop/: main.js  package.json  preload.js
apps/imap-service/: tsconfig.json
apps/imap-service/src/: db.ts  http-server.ts  smtp-service.ts  store.ts  sync-engine.ts
apps/invite/: .env.example  package.json  tailwind.config.cjs  wrangler.toml
apps/invite/app/: globals.css  layout.tsx  page.tsx
apps/invite/lib/: auth.ts  db.ts  email.ts
apps/invite/scripts/: send-test-emails.ts
apps/mail/: package.json  react-router.config.ts  vite.config.ts  wrangler.jsonc
apps/mail/app/: page.tsx  root.tsx  routes.ts
apps/mail/components/: navigation.tsx  nubo-id-banner.tsx  onboarding.tsx
apps/mail/config/: navigation.ts
apps/mail/hooks/: use-billing.ts  use-meeting-room.ts  use-threads.ts
apps/mail/lib/: email-utils.client.tsx  posthog-provider.tsx  site-config.ts  utils.ts
apps/mail/messages/: ar.json  ca.json  cs.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  hu.json  ja.json  ko.json  (+7 more)
apps/server/: FIX-BETTER-AUTH-SECRET.md  SECRETS-CHECKLIST.md  package.json  test-gmail-attachment.ts  test-push.ts  wrangler.jsonc
apps/tauri/: package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
archived/imap-worker/: package.json  tsconfig.json  wrangler.toml
production/: DEPLOYMENT-STATUS.md  IMAP_CLEANUP_TODO.md  KANBAN-MIGRATION.sql  PRODUCTION-LOGS-ANALYSIS.md  check-drafts.ts  env-secrets.d.ts  fix-jwks.sql  test-db.ts  wrangler-auth.jsonc  wrangler-router.jsonc  wrangler-trpc.jsonc  wrangler-webhooks.jsonc
production/src/: ctx.ts  env.ts  main.ts
(+172 files in other folders)
